--- a/index.html
+++ b/index.html
@@ -1,137 +1,49 @@
 <!DOCTYPE html>
 <html lang="sr">
 <head>
-    <meta charset="UTF-8">
-    <title>Polasci iz Sutomora</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            padding: 20px;
-            background: #f0f0f0;
-        }
-        h1 {
-            text-align: center;
-            font-weight: bold;
-            margin-bottom: 30px;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            background: white;
-        }
-        th, td {
-            border: 1px solid #333;
-            padding: 8px;
-            text-align: center;
-        }
-        th {
-            background-color: #4CAF50;
-            color: white;
-        }
-        tr:nth-child(even) {
-            background-color: #f2f2f2;
-        }
-        caption {
-            caption-side: bottom;
-            text-align: right;
-            padding: 10px;
-            font-style: italic;
-        }
-    </style>
+<meta charset="UTF-8">
+<title>Polasci iz Sutomora</title>
+<style>
+    body { font-family: Arial, sans-serif; padding: 20px; background: #f0f0f0; }
+    h1 { text-align: center; font-weight: bold; margin-bottom: 30px; }
+    table { width: 100%; border-collapse: collapse; background: white; }
+    th, td { border: 1px solid #333; padding: 6px; text-align: center; vertical-align: top; }
+    th { background-color: #4CAF50; color: white; }
+    tr:nth-child(even) { background-color: #f2f2f2; }
+    caption { caption-side: bottom; text-align: right; padding: 10px; font-style: italic; }
+</style>
 </head>
 <body>
-    <h1>Polasci iz Sutomora</h1>
-    <table>
-        <tr>
-            <th>Dani u sedmici</th>
-            <th>Subota</th>
-            <th>Nedelja</th>
-        </tr>
-        <tr>
-            <td>
-                BUDVA (BULJARICA / PETROVAC / SV. STEFAN / RAFAILOVIĆI)<br>
-                07:15, 08:15, 09:05, 11:28, 13:01, 14:45, 15:58, 16:51, 20:25
-            </td>
-            <td>07:15, 08:15, 09:05, 11:28, 13:01, 14:45, 16:51</td>
-            <td>07:15, 08:15, 11:28, 13:01, 15:58, 16:51, 20:25</td>
-        </tr>
-        <tr>
-            <td>
-                KOTOR (LASTVA / RADANOVIĆI)<br>
-                07:15, 08:15, 09:05, 13:01, 14:45, 16:51, 20:25
-            </td>
-            <td>07:15, 08:15, 09:05, 13:01, 14:45, 16:51</td>
-            <td>07:15, 08:15, 13:01, 16:51, 20:25</td>
-        </tr>
-        <tr>
-            <td>
-                TIVAT<br>
-                09:05, 13:01, 14:45, 16:51
-            </td>
-            <td>09:05, 13:01, 14:45, 16:51</td>
-            <td>13:01, 16:51</td>
-        </tr>
-        <tr>
-            <td>
-                HERCEG NOVI (PERAST / RISAN / BIJELA / BAOŠIĆI)<br>
-                07:15, 14:45, 16:51, 20:25
-            </td>
-            <td>07:15, 14:45, 16:51</td>
-            <td>07:15, 16:51, 20:25</td>
-        </tr>
-        <tr>
-            <td>
-                AERODROM PODGORICA<br>
-                06:40, 08:50, 12:50, 18:10
-            </td>
-            <td>06:40, 08:50, 12:50, 18:10</td>
-            <td>06:40, 08:50, 12:50, 18:10</td>
-        </tr>
-        <tr>
-            <td>
-                PODGORICA<br>
-                06:40, 08:50, 10:56, 12:50, 15:00, 17:15, 18:10, 20:55
-            </td>
-            <td>06:40, 08:50, 10:56, 12:50, 15:00, 18:10, 20:55</td>
-            <td>06:40, 08:50, 12:50, 15:00, 17:15, 18:10, 20:55</td>
-        </tr>
-        <tr>
-            <td>
-                VIRPAZAR<br>
-                06:40, 08:50, 10:56, 11:45, 12:50, 17:15, 18:10, 20:55
-            </td>
-            <td>06:40, 08:50, 10:56, 11:45, 12:50, 18:10, 20:55</td>
-            <td>06:40, 08:50, 10:56, 11:45, 12:50, 17:15, 18:10, 20:55</td>
-        </tr>
-        <tr>
-            <td>CETINJE<br>15:58</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>DANILOVGRAD<br>10:56</td>
-            <td>10:56</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>NIKŠIĆ<br>10:56</td>
-            <td>10:56</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>KOLAŠIN / MOJKOVAC / BERANE / ROŽAJE<br>15:00</td>
-            <td>15:00</td>
-            <td>15:00</td>
-        </tr>
-        <tr>
-            <td>
-                ULCINJ<br>
-                08:40, 10:40, 11:45, 13:15, 13:40, 14:10, 15:00, 16:00, 17:35, 18:15, 20:35
-            </td>
-            <td>08:40, 10:40, 11:45, 13:15, 13:40, 16:00, 18:15, 20:35</td>
-            <td>08:40, 10:40, 11:45, 13:15, 13:40, 15:00, 16:00, 17:35, 18:15, 20:35</td>
-        </tr>
-    </table>
-    <caption>AS. SUTOMORE 01.12.2025</caption>
-</body>
-</html>
+<h1>Polasci iz Sutomora</h1>
+
+<table>
+<tr>
+    <th>PONEDELJAK/UTORAK/SRIJEDA/ČETVRTAK/PETAK<br>MONDAY/TUESDAY/WEDNESDAY/THURSDAY/FRIDAY</th>
+    <th>SUBOTA / SATURDAY</th>
+    <th>NEDELJA / SUNDAY</th>
+</tr>
+
+<tr>
+    <td>
+        <b>BUDVA (BULJARICA / PETROVAC / SV. STEFAN / RAFAILOVIĆI)</b><br>
+        07:15, 08:15, 09:05, 11:28, 13:01, 14:45, 15:58, 16:51, 20:25
+    </td>
+    <td>07:15, 08:15, 09:05, 11:28, 13:01, 14:45, 16:51</td>
+    <td>07:15, 08:15, 11:28, 13:01, 15:58, 16:51, 20:25</td>
+</tr>
+
+<tr>
+    <td>
+        <b>KOTOR (LASTVA / RADANOVIĆI)</b><br>
+        07:15, 08:15, 09:05, 13:01, 14:45, 16:51, 20:25
+    </td>
+    <td>07:15, 08:15, 09:05, 13:01, 14:45, 16:51</td>
+    <td>07:15, 08:15, 13:01, 16:51, 20:25</td>
+</tr>
+
+<tr>
+    <td>
+        <b>TIVAT</b><br>
+        09:05, 13:01, 14:45, 16:51
+    </td>
+    <td>09:05, 13:01, 14:45, 16:51
