--- a/index.html
+++ b/index.html
@@ -37,18 +37,21 @@
         <td><b>KOTOR (LASTVA / RADANOVIĆI)</b><br>
             07:15, 08:15, 09:05, 13:01, 14:45, 16:51, 20:25
         </td>
+        <td>07:15, 08:15, 09:05, 13:01, 14:45, 16:51, 20:25</td>
         <td>07:15, 08:15, 09:05, 13:01, 14:45, 16:51</td>
         <td>07:15, 08:15, 13:01, 16:51, 20:25</td>
     </tr>
 
     <tr>
-        <td><b>TIVAT</b><br>09:05, 13:01, 14:45, 16:51</td>
+        <td><b>TIVAT</b><br></td>
+        <td>09:05, 13:01, 14:45, 16:51</td>
         <td>09:05, 13:01, 14:45, 16:51</td>
         <td>13:01, 16:51</td>
     </tr>
 
     <tr>
-        <td><b>HERCEG NOVI (PERAST / RISAN / BIJELA / BAOŠIĆI)</b><br>07:15, 14:45, 16:51, 20:25</td>
+        <td><b>HERCEG NOVI (PERAST / RISAN / BIJELA / BAOŠIĆI)</b><br></td>
+        <td>07:15, 14:45, 16:51, 20:25</td>
         <td>07:15, 14:45, 16:51</td>
         <td>07:15, 16:51, 20:25</td>
     </tr>
@@ -60,13 +63,15 @@
     </tr>
 
     <tr>
-        <td><b>PODGORICA</b><br>06:40, 08:50, 10:56, 12:50, 15:00, 17:15, 18:10, 20:55</td>
+        <td><b>PODGORICA</b><br></td>
+        <td>06:40, 08:50, 10:56, 12:50, 15:00, 17:15, 18:10, 20:55</td>
         <td>06:40, 08:50, 10:56, 12:50, 15:00, 18:10, 20:55</td>
         <td>06:40, 08:50, 12:50, 15:00, 17:15, 18:10, 20:55</td>
     </tr>
 
     <tr>
-        <td><b>VIRPAZAR</b><br>06:40, 08:50, 10:56, 11:45, 12:50, 17:15, 18:10, 20:55</td>
+        <td><b>VIRPAZAR</b><br></td>
+        <td>06:40, 08:50, 10:56, 11:45, 12:50, 17:15, 18:10, 20:55</td>
         <td>06:40, 08:50, 10:56, 11:45, 12:50, 18:10, 20:55</td>
         <td>06:40, 08:50, 10:56, 11:45, 12:50, 17:15, 18:10, 20:55</td>
     </tr>
