--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
         <td>06:40, 08:50, 10:56, 11:45, 12:50, 17:15, 18:10, 20:55</td>
     </tr>
 
-    <tr><td>CETINJE<br>15:58</td><td></td><td></td></tr>
+    <tr><td>CETINJE<br></td>
+        <td>15:58</td>
     <tr><td>DANILOVGRAD<br>10:56</td><td>10:56</td><td></td></tr>
     <tr><td>NIKŠIĆ<br>10:56</td><td>10:56</td><td></td></tr>
     <tr><td>KOLAŠIN / MOJKOVAC / BERANE / ROŽAJE<br>15:00</td><td>15:00</td><td>15:00</td></tr>
