--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
     </tr>
 
     <tr>
-        <td><b>KOTOR (LASTVA / RADANOVIĆI)</b><br>
-            07:15, 08:15, 09:05, 13:01, 14:45, 16:51, 20:25
-        </td>
+        <td><b>KOTOR (LASTVA / RADANOVIĆI)</b><br></td>
         <td>07:15, 08:15, 09:05, 13:01, 14:45, 16:51, 20:25</td>
         <td>07:15, 08:15, 09:05, 13:01, 14:45, 16:51</td>
         <td>07:15, 08:15, 13:01, 16:51, 20:25</td>
