--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
     </tr>
 
     <tr>
-        <td><b>AERODROM PODGORICA</b><br>06:40, 08:50, 12:50, 18:10</td>
+        <td><b>AERODROM PODGORICA</b><br></td>
+        <td>06:40, 08:50, 12:50, 18:10</td>
         <td>06:40, 08:50, 12:50, 18:10</td>
         <td>06:40, 08:50, 12:50, 18:10</td>
     </tr>
