--- a/index.html
+++ b/index.html
@@ -77,7 +77,12 @@
 
     <tr><td>CETINJE<br></td>
         <td>15:58</td>
-    <tr><td>DANILOVGRAD<br>10:56</td><td>10:56</td><td></td></tr>
+        <td></td>
+        <td></td>
+    <tr><td>DANILOVGRAD<br></td>
+        <td>10:56</td><td></td></tr>
+        <td>10:56</td><td></td></tr>
+        <td></td><td></td></tr>
     <tr><td>NIKŠIĆ<br>10:56</td><td>10:56</td><td></td></tr>
     <tr><td>KOLAŠIN / MOJKOVAC / BERANE / ROŽAJE<br>15:00</td><td>15:00</td><td>15:00</td></tr>
     <tr>
