--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <td>15:00</td>
         <td>15:00</td>
         <td>15:00</td>
-        <td><b>ULCINJ</b><br></td>
+       <tr></tr> <td><b>ULCINJ</b><br></td>
         <td>08:40, 10:40, 11:45, 13:15, 13:40, 14:10, 15:00, 16:00, 17:35, 18:15, 20:35</td>
         <td>08:40, 10:40, 11:45, 13:15, 13:40, 16:00, 18:15, 20:35</td>
         <td>08:40, 10:40, 11:45, 13:15, 13:40, 15:00, 16:00, 17:35, 18:15, 20:35</td>
