--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </tr>
 
     <tr>
-        <td><b>BUDVA (BULJARICA / PETROVAC / SV. STEFAN / RAFAILOVIĆI)</b></td>
+        <td><b>BUDVA (BULJARICA)<br> (PETROVAC)<br>(SV. STEFAN)<br> (RAFAILOVIĆI)<br></b></td>
         <td>07:15<br>08:15<br>09:05<br>11:28<br>13:01<br>14:45<br>15:58<br>16:51<br>20:25</td>
         <td>07:15<br>08:15<br>09:05<br>11:28<br>13:01<br>14:45<br>16:51</td>
         <td>07:15<br>08:15<br>11:28<br>13:01<br>16:51<br>20:25</td>
