--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     </tr>
 
     <tr>
-        <td><b>BUDVA (BULJARICA)<br> (PETROVAC)<br>(SV. STEFAN)<br> (RAFAILOVIĆI)<br></b></td>
+        <td><b>BUDVA <br>(BULJARICA)<br> (PETROVAC)<br>(SV. STEFAN)<br> (RAFAILOVIĆI)<br></b></td>
         <td>07:15<br>08:15<br>09:05<br>11:28<br>13:01<br>14:45<br>15:58<br>16:51<br>20:25</td>
         <td>07:15<br>08:15<br>09:05<br>11:28<br>13:01<br>14:45<br>16:51</td>
         <td>07:15<br>08:15<br>11:28<br>13:01<br>16:51<br>20:25</td>
     </tr>
 
     <tr>
-        <td><b>KOTOR (LASTVA / RADANOVIĆI)</b></td>
+        <td><b>KOTOR<br> (LASTVA<br> / RADANOVIĆI)<br></b></td>
         <td>07:15<br>08:15<br>09:05<br>13:01<br>14:45<br>16:51<br>20:25</td>
         <td>07:15<br>08:15<br>09:05<br>13:01<br>14:45<br>16:51</td>
         <td>07:15<br>08:15<br>13:01<br>16:51<br>20:25</td>
@@ -46,7 +46,7 @@
     </tr>
 
     <tr>
-        <td><b>HERCEG NOVI (PERAST / RISAN / BIJELA / BAOŠIĆI)</b></td>
+        <td><b>HERCEG NOVI <br>(PERAST <br>/ RISAN <br>/ BIJELA <br>/ BAOŠIĆI)<br></b></td>
         <td>07:15<br>14:45<br>16:51<br>20:25</td>
         <td>07:15<br>14:45<br>16:51</td>
         <td>07:15<br>16:51<br>20:25</td>
@@ -95,7 +95,7 @@
      </tr>
 
     <tr>
-        <td><b>KOLAŠIN / MOJKOVAC / BERANE / ROŽAJE</b></td>
+        <td><b>KOLAŠIN<br> / MOJKOVAC<br> / BERANE<br> / ROŽAJE<br></b></td>
         <td>15:00</td>
         <td>15:00</td>
         <td>15:00</td>
