--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Polasci iz Sutomora</title>
 <style>
     body { font-family: Arial, sans-serif; padding: 20px; background: #f0f0f0; }
-    h1 { text-align: center; font-weight: bold; margin-bottom: 30px; }
+    h1 { text-align: center; vertical-align: top; font-weight: bold; margin-bottom: 30px; }
     table { width: 100%; border-collapse: collapse; background: white; }
     th, td { border: 1px solid #333; padding: 6px; text-align: center; vertical-align: top; }
     th { background-color: #4CAF50; color: white; }
@@ -25,7 +25,7 @@
     </tr>
 
     <tr>
-        <td><b>BUDVA <br>(BULJARICA)<br> (PETROVAC)<br>(SV. STEFAN)<br> (RAFAILOVIĆI)<br></b></td>
+        <td><b>BUDVA<br>(BULJARICA)<br> (PETROVAC)<br>(SV. STEFAN)<br> (RAFAILOVIĆI)<br></b></td>
         <td>07:15<br>08:15<br>09:05<br>11:28<br>13:01<br>14:45<br>15:58<br>16:51<br>20:25</td>
         <td>07:15<br>08:15<br>09:05<br>11:28<br>13:01<br>14:45<br>16:51</td>
         <td>07:15<br>08:15<br>11:28<br>13:01<br>16:51<br>20:25</td>
