--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Polasci iz Sutomora</title>
 <style>
     body { font-family: Arial, sans-serif; padding: 20px; background: #f0f0f0; }
-    h1 { text-align: center; vertical-align: top; font-weight: bold; margin-bottom: 30px; }
+    h1 { text-align: center; vertical-align: middle; font-weight: bold; margin-bottom: 30px; }
     table { width: 100%; border-collapse: collapse; background: white; }
     th, td { border: 1px solid #333; padding: 6px; text-align: center; vertical-align: top; }
     th { background-color: #4CAF50; color: white; }
