--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Polasci iz Sutomora</title>
 <style>
-    body { font-family: Arial, sans-serif; padding: 20px; background: #f0f0f0; }
+    body { font-family: Arial, sans-serif; padding: 20px; vertical-align: middle; background: #f0f0f0; }
     h1 { text-align: center; vertical-align: middle; font-weight: bold; margin-bottom: 30px; }
     table { width: 100%; border-collapse: collapse; background: white; }
     th, td { border: 1px solid #333; padding: 6px; text-align: center; vertical-align: top; }
