--- a/index.html
+++ b/index.html
@@ -4,10 +4,27 @@
 <meta charset="UTF-8">
 <title>Polasci iz Sutomora</title>
 <style>
-    body { font-family: Arial, sans-serif; padding: 20px; vertical-align: middle; background: #f0f0f0; }
-    h1 { text-align: center; vertical-align: middle; font-weight: bold; margin-bottom: 30px; }
+    body { font-family: Arial, sans-serif; padding: 20px; background: #f0f0f0; }
+    h1 { text-align: center; font-weight: bold; margin-bottom: 30px; }
+
     table { width: 100%; border-collapse: collapse; background: white; }
-    th, td { border: 1px solid #333; padding: 6px; text-align: center; vertical-align: top; }
+
+    th, td { 
+        border: 1px solid #333; 
+        padding: 6px; 
+        text-align: center;
+        vertical-align: top;
+    }
+
+    /* PRVA KOLONA – centriranje po sredini i vertikalno i horizontalno */
+    td:first-child {
+        display: flex;
+        flex-direction: column;
+        justify-content: center; 
+        align-items: center;
+        text-align: center;
+    }
+
     th { background-color: #4CAF50; color: white; }
     tr:nth-child(even) { background-color: #f2f2f2; }
     caption { caption-side: bottom; text-align: right; padding: 10px; font-style: italic; }
@@ -25,14 +42,14 @@
     </tr>
 
     <tr>
-        <td><b>BUDVA<br>(BULJARICA)<br> (PETROVAC)<br>(SV. STEFAN)<br> (RAFAILOVIĆI)<br></b></td>
+        <td><b>BUDVA<br>(BULJARICA)<br>(PETROVAC)<br>(SV. STEFAN)<br>(RAFAILOVIĆI)</b></td>
         <td>07:15<br>08:15<br>09:05<br>11:28<br>13:01<br>14:45<br>15:58<br>16:51<br>20:25</td>
         <td>07:15<br>08:15<br>09:05<br>11:28<br>13:01<br>14:45<br>16:51</td>
         <td>07:15<br>08:15<br>11:28<br>13:01<br>16:51<br>20:25</td>
     </tr>
 
     <tr>
-        <td><b>KOTOR<br> (LASTVA)<br>(RADANOVIĆI)<br></b></td>
+        <td><b>KOTOR<br>(LASTVA)<br>(RADANOVIĆI)</b></td>
         <td>07:15<br>08:15<br>09:05<br>13:01<br>14:45<br>16:51<br>20:25</td>
         <td>07:15<br>08:15<br>09:05<br>13:01<br>14:45<br>16:51</td>
         <td>07:15<br>08:15<br>13:01<br>16:51<br>20:25</td>
@@ -46,7 +63,7 @@
     </tr>
 
     <tr>
-        <td><b>HERCEG NOVI <br>(PERAST)<br>(RISAN)<br>(BIJELA)<br>(BAOŠIĆI)<br></b></td>
+        <td><b>HERCEG NOVI<br>(PERAST)<br>(RISAN)<br>(BIJELA)<br>(BAOŠIĆI)</b></td>
         <td>07:15<br>14:45<br>16:51<br>20:25</td>
         <td>07:15<br>14:45<br>16:51</td>
         <td>07:15<br>16:51<br>20:25</td>
@@ -95,7 +112,7 @@
      </tr>
 
     <tr>
-        <td><b>KOLAŠIN<br>MOJKOVAC<br>BERANE<br>ROŽAJE<br></b></td>
+        <td><b>KOLAŠIN<br>MOJKOVAC<br>BERANE<br>ROŽAJE</b></td>
         <td>15:00</td>
         <td>15:00</td>
         <td>15:00</td>
