--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <style>
     body { font-family: Arial, sans-serif; padding: 20px; vertical-align: middle; background: #f0f0f0; }
     h1 { text-align: center; vertical-align: middle; font-weight: bold; margin-bottom: 30px; }
-    table { width: 100%; border-collapse: collapse; background: white; vertical-align: middle }
+    table { width: 100%; border-collapse: collapse; background: white; vertical-align: middle; }
     th, td { border: 1px solid #333; padding: 6px; text-align: center; vertical-align: top; }
     th { background-color: #4CAF50; color: white; }
     tr:nth-child(even) { background-color: #f2f2f2; }
